# picture-categorizer

./: .dockerignore  .editorconfig  .env  .eslintrc.cjs  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  build-github.sh  build.gradle.kts  build.js  deploy-to-nfsn.sh  docker-compose.yml  framework.md  package-lock.json  package.json  publish.js  settings.gradle.kts
server/: AppConfig.ts  Cargo.toml  DiskCache.ts  MySql2SqLite.ts  MySqlToSqLite.ts  Page.ts  app-config.json  index.ts  jest.config.ts  migrator.ts  package-lock.json  package.json  rollup.config.js  start-server.sh  tsconfig.json
server/migrations/: V01__sqlite_catpics.sql  V02__add-picture-file-type.sql  V02__disk-cache.sql  V03__add-picture-tags.sql  V03__resize-pictures-table.sql  V04__add_headline_tag_id.sql  V04__tag_rankings.sql
server/pictures/: CachingPictureFileService.ts  CachingPictureService.ts  DescribedPicture.ts  ManagePictures.ts  Picture.ts  PictureAlreadyExistsException.ts  PictureFile.ts  PictureNotFoundException.ts  PictureRepository.ts  PictureResponse.ts  PictureRoutes.ts  PictureService.ts  ResizingPictureFileService.ts  ResizingPictureService.ts  ServePictureFiles.ts  ServePictureInformation.ts  ServePictures.ts
server/security/: AuthenticatedCatEmployee.ts  AuthenticationConfiguration.ts  BCryptEncoder.ts  BCryptJsWorker.ts  CatEmployeeCredentials.ts  CatEmployeeEntry.ts  DisabledCatEmployee.ts  Encoder.ts  EncoderConfig.ts  JwtToken.ts  JwtTokenManagement.ts  ManageJwtTokens.ts  UnauthenticatedCatEmployee.ts
server/src/: app_config.rs  connection_config.rs  errors.rs  (+2 more)
(+236 files in other folders)
