[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.34.0"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3.6"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
mockall = "0.12.1"
once_cell = "1.19.0"
lazy_static = "1.4.0"
async_once = "0.2.6"
