[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3.6"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
anyhow = "1.0"
mockall = "0.12.1"
once_cell = "1.19.0"
lazy_static = "1.4.0"
async_once = "0.2.6"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
image = "0.25.1"
futures = "0.3"
bytes = "1.6.0"
